@@ -1,5 +1,7 @@
 
 5.1.0 -> 5.2a0:
+    - jbj: fire triggers from Provides: dependency set.
+    - jbj: rpmio: add argiCmp and argiSort.
     - jbj: loop over 1 element NEVRA dependency set when firing triggers.
     - jbj: permit rpmdsNew() to create RPMTAG_NAME rpmds, simplify ds->Type.
     - jbj: permit multiple triggers to fire from packages.
